Updated portfolio layout and styles

--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
         </ul>
     </div>
     <div class="right">
-       <button><a href="/contact">Contact</a></button> 
+       <button>Contact</button>
     </div>
         </nav>
     </header>
@@ -45,13 +45,26 @@
             <li><a href="#" target="_main"><img src="/linkedin.png" alt="linkedin"></a></li>
             <li><a href="#" target="_main"><img src="/twitter.png" alt="twitter"></a></li>
         </div>
+        <div class="resume">
+            <button>Resume</button>
+        </div>
         </div>
         <div class="rightblock">
             <img src="img.png" alt="student">
         </div>
     </div>
     <div class="secondsection">
-    </div>
+        <div id="about"><u><h2>About Me</h2></u></div>
+        <div class="about-container">
+          <div class="about-text">
+            I'm Akhilesh Arli, an AI/ML enthusiast with a solid foundation in programming and development.
+            I have strong expertise in web development, machine learning, and data structures & algorithms.
+          </div>
+          <div class="about-img">
+            <img src="about-image.png" alt="About Me Image">
+          </div>
+        </div>
+      </div>      
     </main>
 </body>
 </html>
