--- a/portfolio.html
+++ b/portfolio.html
@@ -36,6 +36,7 @@
               var typed = new Typed('#element', {
                 strings: ['Developer', 'Programer'],
                 typeSpeed: 90,
+                loop:true
               });
             </script>
             </div>
@@ -53,6 +54,7 @@
             <img src="img.png" alt="student">
         </div>
     </div>
+    <hr>
     <div class="secondsection">
         <div id="about"><u><h2>About Me</h2></u></div>
         <div class="about-container">
@@ -61,10 +63,20 @@
             I have strong expertise in web development, machine learning, and data structures & algorithms.
           </div>
           <div class="about-img">
-            <img src="about-image.png" alt="About Me Image">
+            <img src="Akhil_img.jpg" alt="About Me Image">
           </div>
         </div>
       </div>      
+      <div class="thirdsection"></div>
+      <div class="fourthsection">
+       <!-- <footer>
+        <h2>Contact Me!!</h2>
+        <form action="">
+          <label for="fname">Name</label>
+          <input type="text">
+        </form>
+       </footer> -->
+      </div>
     </main>
 </body>
 </html>
