--- a/portfolio.html
+++ b/portfolio.html
@@ -105,6 +105,24 @@
         </div>
       </div>
     </div>
+    <div class="experience">
+      <h2 id="experience">Experience</h2>
+      <div class="internships">
+        <div class="screenadragogy">
+          <div id="comp-img">
+            <img src="screenandragogy.png" alt="Screen Andragogy Platforms Logo">
+          </div>
+          <div id="inter-content">
+            <h4>Intern - Market Research & AI Analytics Strategist</h4>
+            <p><strong>Company:</strong> Screen Andragogy Platforms</p>
+            <p><strong>Duration:</strong> April 21, 2025 – August 5, 2025</p>
+            <p>Actively contributed to AI analytics and market research report development, 
+               showcasing strong analytical skills, technical abilities, and professionalism.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    
     <div class="contact">
       <div id="getintouch">
         <h2><u>Get in Touch</u></h2>
