--- a/portfolio.html
+++ b/portfolio.html
@@ -42,9 +42,9 @@
             </div>
         </div>
         <div class="icons">
-            <li><a href="#" target="_main"><img src="/instagram.png" alt="instagram"></a></li>
+            <li><a href="#" target="_main"><img src="leetcode-2.png" alt="leetcode"></a></li>
             <li><a href="#" target="_main"><img src="/linkedin.png" alt="linkedin"></a></li>
-            <li><a href="#" target="_main"><img src="/twitter.png" alt="twitter"></a></li>
+            <li><a href="#" target="_main"><img src="github-mark.png" alt="github"></a></li>
         </div>
         <div class="resume">
             <button>Resume</button>
@@ -106,7 +106,7 @@
       </div>
     </div>
     <div class="experience">
-      <h2 id="experience">Experience</h2>
+      <h2 id="experience"><u>Experience</u></h2>
       <div class="internships">
         <div class="screenadragogy">
           <div id="comp-img">
